--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ## Database Properties
-spring.datasource.url = jdbc:mysql://localhost:3306/dba?useSSL=false
+spring.datasource.url = jdbc:mysql://bb249715480444:edd499ce@us-cdbr-east-02.cleardb.com/heroku_9914be54e3cfe25?reconnect=true
+
 spring.datasource.username = mano
 spring.datasource.password = mano
 
